# OverApi

./: .dockerignore  .gitignore  AUDIT_REPORT.md  COMPLETE_AUDIT_ISSUES.md  DELIVERY_CHECKLIST.md  Dockerfile  ENTERPRISE_FEATURES.md  EXECUTIVE_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  INTEGRATION_COMPLETE.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_MODULES.md  install.sh  main.py  overapi-gui.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
docs/: HTTP_WORKBENCH_FEATURES.md
overapi/: __init__.py  __main__.py  _version.py  cli.py  gui.py
overapi/bypass/: engine.py
overapi/core/: __init__.py  api_detector.py  config.py  constants.py  context.py  crawler.py  database.py  enterprise_logger.py  exceptions.py  logger.py  preferences.py
overapi/fuzzers/: engine.py
overapi/gui/: __init__.py  app.py  tkinter_app.py
overapi/modules/: __init__.py
overapi/modules/graphql/: __init__.py  scanner.py
overapi/modules/grpc/: __init__.py  scanner.py
overapi/modules/rest/: __init__.py  scanner.py
overapi/modules/security/: __init__.py  config.yaml
overapi/modules/security/auth/: __init__.py  jwt_analyzer.py
overapi/modules/security/business_logic/: __init__.py
overapi/modules/security/injection/: __init__.py  ssrf_tester.py
overapi/modules/security/reporting/: __init__.py  advanced_reporter.py
overapi/modules/soap/: __init__.py  scanner.py
overapi/modules/webhook/: __init__.py  scanner.py
overapi/modules/websocket/: __init__.py  scanner.py
overapi/payloads/: __init__.py  advanced_payloads.py  enterprise_payloads.py
overapi/plugins/: __init__.py  base.py  manager.py
overapi/plugins/installed/: __init__.py  example_plugin.py
overapi/protocols/graphql/: attacker.py  scanner.py
overapi/protocols/grpc/: __init__.py  scanner.py
overapi/protocols/rest/: scanner.py
overapi/protocols/soap/: __init__.py  scanner.py
overapi/protocols/webhook/: __init__.py
overapi/protocols/websocket/: __init__.py  scanner.py
overapi/report/: __init__.py  html_generator.py  json_generator.py  report_generator.py
overapi/reports/: __init__.py  csv_generator.py  html_generator.py  json_generator.py  pdf_generator.py  report_generator.py
overapi/scanner/: __init__.py  fuzzer.py  scanner.py  security_tester.py
overapi/scanners/: __init__.py  advanced_flows.py  business_logic.py  jwt.py  orchestrator.py  security_tester.py  ssrf.py
overapi/testing/: __init__.py  mock_server.py  request_logger.py  webhook_tester.py
overapi/tools/: __init__.py  vuln_db.py  wordlist_manager.py
overapi/utils/: __init__.py  certificate_manager.py  http_client.py  seclists_loader.py  validators.py  wordlist_loader.py
tests/: __init__.py  conftest.py  test_advanced_features.py  test_bypass.py  test_fuzzer.py  test_http_workbench_features.py  test_integration.py  test_security_modules.py  test_wordlist_loader.py
