[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "overapi"
version = "1.0.0"
description = "Universal API Security Scanner - Comprehensive offensive & defensive API testing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "security",
    "api",
    "scanner",
    "pentest",
    "security-testing",
    "rest-api",
    "graphql",
    "soap",
    "grpc",
    "websocket",
    "owasp",
    "vulnerability-scanner",
]
authors = [
    {name = "OverApi Team", email = "security@overapi.dev"}
]
maintainers = [
    {name = "GhostN3xus", email = "security@overapi.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pyjwt>=2.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
    "pytest-asyncio>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/GhostN3xus/OverApi"
Documentation = "https://github.com/GhostN3xus/OverApi/wiki"
Repository = "https://github.com/GhostN3xus/OverApi"
"Bug Reports" = "https://github.com/GhostN3xus/OverApi/issues"
Changelog = "https://github.com/GhostN3xus/OverApi/releases"

[project.scripts]
overapi = "overapi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["overapi*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
overapi = [
    "data/*.txt",
    "data/*.json",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["overapi"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
