[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overapi"
version = "2.0.0"
description = "Universal API Security Scanner - Enterprise Edition"
authors = [
    {name = "GhostN3xus & OverApi Team", email = "security@overapi.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
timeout = 60

[tool.coverage.run]
source = ["overapi"]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
